# Arbitrage-Bot

./: .env.example  .gitignore  .gitmodules  DEPENDENCIES.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_SETUP.md  DEV_STARTUP_GUIDE.md  DEX_CONFIGURATION.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  README.md  SINGLE_EXECUTABLE_DEPLOYMENT.md  analyze_profit.py  build.ps1  build_executable.py  check_balance.py  complete_build.py  config.py  monitor_terminal.py  requirements.txt  script.py  setup-dev.bat  setup-dev.ps1  setup-dev.sh  socketio_server.py  start-dev.ps1  websocket_server.py
contracts/: Makefile  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: FlashLoanReceiver.sol  FlashLoanReceiver.sol.backup
contracts/test/: FlashLoanReceiver.t.sol  Integration.t.sol
demo-distribution/: DEMO_README.md
docs/: README.md
docs/guides/: README_FOUNDRY.md
examples/: flash_loan_example.py
frontend/: README.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: Controls.tsx  Dashboard.tsx  Home.tsx  Info.tsx  (+4 more)
scripts/deployment/: deploy_flash_loan_receiver.py
scripts/monitoring/: arbitrage_bot.py  backrun_script.py  token_addresses.py  token_list.json
scripts/testing/: set_disable_dex_calls.py  test_deployment.py  test_flash_loan.py  test_flash_loan_simple.py  test_minimal_flash_loan.py
(+8 files in other folders)
