[package]
name = "arbitrage-bot"
version = "1.0.0"
description = "Cryptocurrency Arbitrage Bot Desktop Application"
authors = ["you"]
license = ""
repository = ""
default-run = "arbitrage-bot"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "1.5.0", features = [ "fs-all", "shell-execute", "shell-sidecar", "window-start-dragging", "window-hide", "window-unminimize", "notification-all", "window-close", "window-minimize", "window-maximize", "shell-open", "window-show", "window-unmaximize", "system-tray", "notification"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
